# agent-model-router

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt  tiers.json
integrations/hermes/: plugin.py
integrations/openclaw/plugins/agent-model-router/: index.js  openclaw.plugin.json  package.json
scripts/: download_models.py  setup.sh
server/: service.py
src/model_router/: __init__.py  bge_onnx.py  features.py  flags.py  router.py  trajectory.py  v4_features.py
src/model_router/engine/: __init__.py  artifacts.py  core.py  ensemble.py  features.py  heads.py  postprocess.py  postprocess_helpers.py  types.py
tests/: test_router.py
